[Mac][Material Design] Bring Omnibox stroke and MD colors up to spec.

This cl changes the Omnibox's stroke in Incognito mode to match the
recent spec revisions made by sgabriel@.

Changing to the new spec also required switching other MD colors to the
sRGB color space so that everything matched. The plan was to switch to
sRGB (which is correct - the calibrated space is not) eventually, but
to get the Omnibox to look right, now is the time.

R=avi@chromium.org,sky@chromium.org
BUG=613749

Review-Url: https://codereview.chromium.org/2013183003
Cr-Commit-Position: refs/heads/master@{#396986}

Former-commit-id: 7a7f2e398b53990858d88bc19115c137630795f3