chrome/browser/ui/cocoa/location_bar/selected_keyword_decoration.mm
@@ -35,7 +35,10 @@ SelectedKeywordDecoration::SelectedKeywordDecoration() {
 SelectedKeywordDecoration::~SelectedKeywordDecoration() {}
 
 NSColor* SelectedKeywordDecoration::GetBackgroundBorderColor() {
-  return skia::SkColorToCalibratedNSColor(gfx::kGoogleBlue700);
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    return skia::SkColorToCalibratedNSColor(gfx::kGoogleBlue700);
+  }
+  return skia::SkColorToSRGBNSColor(gfx::kGoogleBlue700);
 }
 
 CGFloat SelectedKeywordDecoration::GetWidthForSpace(CGFloat width) {
