chrome/browser/ui/cocoa/omnibox/omnibox_popup_cell.mm
@@ -112,10 +112,16 @@ NSColor* DimTextColor(BOOL is_dark_theme) {
   return skia::SkColorToSRGBNSColor(SkColorSetRGB(0x64, 0x64, 0x64));
 }
 NSColor* PositiveTextColor() {
-  return skia::SkColorToCalibratedNSColor(SkColorSetRGB(0x3d, 0x94, 0x00));
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    return skia::SkColorToCalibratedNSColor(SkColorSetRGB(0x3d, 0x94, 0x00));
+  }
+  return skia::SkColorToSRGBNSColor(SkColorSetRGB(0x3d, 0x94, 0x00));
 }
 NSColor* NegativeTextColor() {
-  return skia::SkColorToCalibratedNSColor(SkColorSetRGB(0xdd, 0x4b, 0x39));
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    return skia::SkColorToCalibratedNSColor(SkColorSetRGB(0xdd, 0x4b, 0x39));
+  }
+  return skia::SkColorToSRGBNSColor(SkColorSetRGB(0xdd, 0x4b, 0x39));
 }
 NSColor* URLTextColor(BOOL is_dark_theme) {
   if (!ui::MaterialDesignController::IsModeMaterial()) {
