chrome/browser/ui/cocoa/toolbar/toolbar_button_cocoa.mm
@@ -235,7 +235,11 @@ const NSSize kMDButtonIconSize = NSMakeSize(16, 16);
   [[BrowserToolsImageRep alloc]
       initWithDrawSelector:@selector(drawBrowserToolsIcon:)
                   delegate:[BrowserToolsImageRep class]];
-  [imageRep setFillColor:skia::SkColorToCalibratedNSColor(fillColor)];
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    [imageRep setFillColor:skia::SkColorToCalibratedNSColor(fillColor)];
+  } else {
+    [imageRep setFillColor:skia::SkColorToSRGBNSColor(fillColor)];
+  }
 
   // Create the image from the image rep.
   NSImage* browserToolsIcon =
